--- a/contacto.html
+++ b/contacto.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
     <!-- ================= NAVBAR ============== -->
     <header id="navbar"></header>
 
     <!-- ================= CONTENIDO ============== -->
-    <main>
-        <section class="container">
+    <main class="container mb-5">
+        <section >
             <!--aqui comienza la seccion-->
             <div class="container text-center">
                 <div class="row">
@@ -117,7 +117,7 @@
     </main>
 
     <!-- ================= FOOTER ============== -->
-    <footer class="text-center text-lg-center justify-content-center d-flex" id="footer"></footer>
+    <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
 
 
     <!-- ================= JS ============== -->
