--- a/nosotros.html
+++ b/nosotros.html
@@ -23,7 +23,7 @@
     <header id="navbar"></header>
 
     <!-- ================= CONTENIDO ============== -->
-    <main>
+    <main class="container mb-5">
         <section class="container">
             <div class="title">
                 <h1>Resumen</h1>
@@ -216,7 +216,7 @@
     </main>
 
     <!-- ================= FOOTER ============== -->
-    <footer class="text-center text-lg-center justify-content-center d-flex" id="footer"></footer>
+    <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
 
     <!-- ================= JS ============== -->
     <!--Bootstrap-->
