--- a/productos.html
+++ b/productos.html
@@ -23,7 +23,7 @@
   <header id="navbar"></header>
 
   <!-- ================= CONTENIDO ============== -->
-  <main>
+  <main class="container mb-5">
     <!-- <section class="container"> -->
     
     <div class="container-fluid text-center container-products">
@@ -48,7 +48,7 @@
     <!-- </section> -->
   </main>
   <!-- ================= FOOTER ============== -->
-  <footer class="text-center text-lg-center justify-content-center d-flex" id="footer"></footer>
+  <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
 
   <!-- ================= JS ============== -->
   <!--Bootstrap-->
