--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <header id="navbar"></header>
 
     <!-- ================= CONTENIDO ============== -->
-    <main></main>
+    <main class="container mb-5"></main>
 
     <!-- ================= FOOTER ============== -->
-    <footer class="text-center text-lg-center justify-content-center d-flex" id="footer"></footer>
+    <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
 
     <!-- ================= JS ============== -->
     <!--Bootstrap-->
