Corrección de ortografía

--- a/nosotros.html
+++ b/nosotros.html
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <p>Este proyecto es un e-commerce enfocado a la venta de vestimenta para personas con gusto y
                         apreciación de lo artesanal.</p>
-                    <p>Su desarrollo se dio durante el bootcamp de Generation Mexico para convertirnos en
+                    <p>Su desarrollo se dio durante el bootcamp de Generation México para convertirnos en
                         Desarrolladores
                         Java Full Stack Jr. En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco
                         de trabajo SCRUM y para el desarrollo Frontend se utilizaron tecnologías web como HTML, CSS y
@@ -83,7 +83,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="title__card">
-                                    <span>Bryan Alexis</span>
+                                    <span>Bryan Martínez</span>
                                 </div>
                                 <div class="subtitle__card">
                                     <span>Desarrollador Java | Ing. en Sistemas Computacionales</span>
