--- a/prueba.html
+++ b/prueba.html
@@ -21,6 +21,10 @@
     <header id="navbar"></header>
     <main class="container">
         <form action="" class="needs-validation">
+            <div class="alert alert-success fade show" style="display:none;" role="alert" id="alertValidacionesbueno">
+                <p id="alertValidacionesTextoBueno"></p>
+            </div>
+
             <div class="alert alert-danger fade show" style="display:none;" role="alert" id="alertValidaciones">
                 <p id="alertValidacionesTexto"></p>
             </div>
