se corrige el color de los botones y responsividad del campo cantidad

--- a/alta.html
+++ b/alta.html
@@ -50,15 +50,15 @@
                     <div class="">
                         <label for="cantidadInput" class="form-label">Cantidad disponible</label>
                         <div class="row d-flex justify-content-start">
-                            <div class="col-md-1 col-sm-1">
-                                <button type="button" class="btn btn-primary" id="btnMenos">-</button>
+                            <div class="col-md-1 col-1">
+                                <button type="button" class="btn btn-warning" id="btnMenos">-</button>
                             </div>
-                            <div class="col-md-2 col-sm-1">
+                            <div class="col-md-2 col-3 col-fluid" style="margin-left: 10px;">
                                 <input type="number" class="form-control" id="cantidadInput"
                                     aria-describedby="emailHelp" style="text-align: center;" value="0">
                             </div>
-                            <div class="col-md-1 col-sm-1">
-                                <button type="button" class="btn btn-primary" id="btnMas">+</button>
+                            <div class="col-md-1 col-1">
+                                <button type="button" class="btn btn-warning" id="btnMas">+</button>
                             </div>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="col-md-1 col-sm-1">
-                <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
+                <button type="button" class="btn btn-warning" id="btnGuardar">Guardar</button>
             </div>
         </form>
     </main>
