se agregan links de redes sociales

--- a/nosotros.html
+++ b/nosotros.html
@@ -67,8 +67,8 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <span><i class="bi bi-github social__media__icon"></i></span>
-                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                                <a href="https://github.com/ALEXISSL10" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/alexis-s%C3%A1nchez-le%C3%B3n" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -94,8 +94,8 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <span><i class="bi bi-github social__media__icon"></i></span>
-                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                                <a href="https://github.com/BryanAlexisMartinez" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/bryan-alexis-mart%C3%ADnez-alvarado-6225a8233/" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -122,8 +122,8 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <span><i class="bi bi-github social__media__icon"></i></span>
-                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                                <a href="https://github.com/krlozwar" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/juan-carlos-bernal-sandoval-a062b6219/" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -149,9 +149,9 @@
                                 </p>
                             </div>
                             <!-- redes sociales -->
-                            <div class="social__media card-footer ">
-                                <span><i class="bi bi-github social__media__icon"></i></span>
-                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                            <div class="social__media card-footer">
+                                <a href="https://github.com/zeped418" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/carlos-zep-ram" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -178,8 +178,8 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <span><i class="bi bi-github social__media__icon"></i></span>
-                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                                <a href="https://github.com/JuanAristeo" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/juan-aristeo-010120ed/" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -205,8 +205,8 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <span><i class="bi bi-github social__media__icon"></i></span>
-                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                                <a href="https://github.com/RobertoMonzon" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/roberto-alexis-rivas-monz%C3%B3n-770077147/" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
