se cambia tipo de fuente

--- a/nosotros.html
+++ b/nosotros.html
@@ -13,7 +13,8 @@
     <!-- fonts google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap"
+        rel="stylesheet">
     <!-- css interno -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -67,8 +68,10 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <a href="https://github.com/ALEXISSL10" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
-                                <a href="https://www.linkedin.com/in/alexis-s%C3%A1nchez-le%C3%B3n" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
+                                <a href="https://github.com/ALEXISSL10" target="_blank"><span><i
+                                            class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/alexis-s%C3%A1nchez-le%C3%B3n"
+                                    target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -94,8 +97,10 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <a href="https://github.com/BryanAlexisMartinez" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
-                                <a href="https://www.linkedin.com/in/bryan-alexis-mart%C3%ADnez-alvarado-6225a8233/" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
+                                <a href="https://github.com/BryanAlexisMartinez" target="_blank"><span><i
+                                            class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/bryan-alexis-mart%C3%ADnez-alvarado-6225a8233/"
+                                    target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -122,8 +127,10 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <a href="https://github.com/krlozwar" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
-                                <a href="https://www.linkedin.com/in/juan-carlos-bernal-sandoval-a062b6219/" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
+                                <a href="https://github.com/krlozwar" target="_blank"><span><i
+                                            class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/juan-carlos-bernal-sandoval-a062b6219/"
+                                    target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -150,8 +157,10 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer">
-                                <a href="https://github.com/zeped418" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
-                                <a href="https://www.linkedin.com/in/carlos-zep-ram" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
+                                <a href="https://github.com/zeped418" target="_blank"><span><i
+                                            class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/carlos-zep-ram" target="_blank"><span><i
+                                            class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -178,8 +187,10 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <a href="https://github.com/JuanAristeo" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
-                                <a href="https://www.linkedin.com/in/juan-aristeo-010120ed/" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
+                                <a href="https://github.com/JuanAristeo" target="_blank"><span><i
+                                            class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/juan-aristeo-010120ed/" target="_blank"><span><i
+                                            class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -205,8 +216,10 @@
                             </div>
                             <!-- redes sociales -->
                             <div class="social__media card-footer ">
-                                <a href="https://github.com/RobertoMonzon" target="_blank"><span><i class="bi bi-github social__media__icon"></i></span></a>
-                                <a href="https://www.linkedin.com/in/roberto-alexis-rivas-monz%C3%B3n-770077147/" target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
+                                <a href="https://github.com/RobertoMonzon" target="_blank"><span><i
+                                            class="bi bi-github social__media__icon"></i></span></a>
+                                <a href="https://www.linkedin.com/in/roberto-alexis-rivas-monz%C3%B3n-770077147/"
+                                    target="_blank"><span><i class="bi bi-linkedin social__media__icon"></i></span></a>
                             </div>
                         </div>
                     </div>
