--- a/contacto.html
+++ b/contacto.html
@@ -11,9 +11,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- fonts google-->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap"
+        rel="stylesheet">
     <!-- css interno -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -52,7 +56,7 @@
                             action="https://formsubmit.co/tester.anonimo.85@gmail.com" method="POST">
 
                             <!-- Nombre -->
-                            <div class="mb-3">
+                            <div class="mb-5">
                                 <div class="d-flex">
                                     <label for="nombreInput" class="form-label">Nombre</label>
                                     <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
@@ -67,7 +71,7 @@
                             </div>
 
                             <!-- Teléfono -->
-                            <div class="mb-3">
+                            <div class="mb-5">
                                 <div class="d-flex">
                                     <label for="telInput" class="form-label">Teléfono</label>
                                     <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
@@ -82,7 +86,7 @@
                                     minlength="10" maxlength="10" autocomplete="tel" name="phone">
                             </div>
                             <!-- Email -->
-                            <div class="mb-3">
+                            <div class="mb-5">
                                 <div class="d-flex">
                                     <label for="emailInput" class="form-label">E-mail</label>
 
@@ -96,7 +100,7 @@
                                     placeholder="Ej. correo@example.com" required name="email">
                             </div>
                             <!-- Mensaje -->
-                            <div class="mb-3">
+                            <div class="mb-5">
                                 <div class="d-flex">
                                     <label for="msjArea" class="form-label">Mensaje</label>
                                     <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
@@ -111,8 +115,9 @@
                             <div class="d-grid gap-2 col-6 mx-auto">
                                 <button type="button" class="btn btn-warning" id="btnEnviar"
                                     style="margin: 2rem 0 2rem 0;">
-                                    <span style="margin:0 1rem 0 auto; font-size: 2.5rem;"><i
-                                            class="bi bi-send"></i></span>
+                                    <span> 
+                                        <i class="bi bi-send icon__send"></i>
+                                    </span>
                                     Enviar mensaje </button>
                             </div>
 
