se corrige margin de inputs del form

--- a/contacto.html
+++ b/contacto.html
@@ -35,8 +35,8 @@
                         <!--Info contacto-->
                         <div class="inf-contact">
                             <span>Información</span>
-                            <p> <i class="bi bi-geo-fill icon__contacto"></i> Oaxaca 26, Centro, Dolores Hidalgo,
-                                Guanajuato, México.</p>
+                            <p> <i class="bi bi-geo-fill icon__contacto"></i> Oaxaca 26, Dolores Hidalgo,
+                                Gto.</p>
                             <p><i class="bi bi-telephone-fill icon__contacto"></i>(+52) 41 81 10 20 62</p>
                             <p><i class="bi bi-envelope-fill icon__contacto"></i>ventas@kotomitl.com</p>
                         </div>
