--- a/nosotros.html
+++ b/nosotros.html
@@ -30,11 +30,11 @@
                 <h1>Resumen</h1>
             </div>
             <!-- ============= Resumen del proyecto ================ -->
-            <div class="card" style="margin-bottom: 1.5rem;">
+            <div class="card" style="margin-bottom: 1.5rem; text-align: justify;">
                 <div class="card-body">
                     <p>Este proyecto es un e-commerce enfocado a la venta de vestimenta para personas con gusto y
                         apreciación de lo artesanal.</p>
-                    <p>Su desarrollo se dio durante el bootcamp de Generation Mexico para convertirnos en
+                    <p>Su desarrollo se dio durante el bootcamp de Generation México para convertirnos en
                         Desarrolladores
                         Java Full Stack Jr. En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco
                         de trabajo SCRUM y para el desarrollo Frontend se utilizaron tecnologías web como HTML, CSS y
