--- a/index.html
+++ b/index.html
@@ -24,7 +24,119 @@
     <header id="navbar"></header>
 
     <!-- ================= CONTENIDO ============== -->
-    <main class="container mb-5"></main>
+    <main class="container mb-5">
+        <section>
+            <div id="carousel" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./src/img/home/Kotomitl.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./src/img/home/Kotomitl.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./src/img/home/Kotomitl.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <hr class="featurette-divider">
+        <section class="container">
+            <div class="title">
+                <h1>Vestimenta</h1>
+            </div>
+
+            <!-- ========== contenedor de productos =========== -->
+
+            <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 g-3">
+                <div class="col" style="margin-bottom: 2rem;">
+                    <div class="card bg-transparent h-100 border-0" style="box-shadow:none;">
+                        <div style="text-align: center;">
+                            <img src="./src/img/home/img1.jpeg"
+                                style="width: 50%; height:auto; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded-circle" alt="Alexis">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="fw-normal">Femenina</h2>
+                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Eum nemo veniam quisquam ullam.</p>
+                        </div>
+                        <div class="card-footer border-top-0 text-center">
+                            <button type="button" class="btn btn-warning"><span class="texto_boton">Ver más</span>
+                                <span><i class="bi bi-arrow-right home__icon"></i></span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" style="margin-bottom: 2rem;">
+                    <div class="card bg-transparent h-100 border-0" style="box-shadow:none;">
+                        <div style="text-align: center;">
+                            <img src="./src/img/home/img3.jpg"
+                                style="width: 50%; height: auto; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded-circle" alt="Alexis">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="fw-normal">Infantil</h2>
+                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Eum nemo veniam quisquam ullam.</p>
+                        </div>
+                        <div class="card-footer border-top-0 text-center">
+                            <button type="button" class="btn btn-warning"><span class="texto_boton">Ver más</span>
+                                <span><i class="bi bi-arrow-right home__icon"></i></span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" style="margin-bottom: 2rem;">
+                    <div class="card bg-transparent h-100 border-0" style="box-shadow:none;">
+                        <div style="text-align: center;">
+                            <img src="./src/img/home/img2.jpeg"
+                                style="width: 50%; height: auto; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
+                                class="img-fluid rounded-circle" alt="Alexis">
+                        </div>
+                        <div class="card-body">
+                            <h2 class="fw-normal">Masculina</h2>
+                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Eum nemo veniam quisquam ullam.</p>
+                        </div>
+                        <div class="card-footer border-top-0 text-center">
+                            <button type="button" class="btn btn-warning"><span class="texto_boton">Ver más</span>
+                                <span><i class="bi bi-arrow-right home__icon"></i></span></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr class="featurette-divider">
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h2 class="featurette-heading fw-normal lh-1">First featurette heading. 
+                    <br>
+                    <span class="text-body-secondary">It’ll blow your mind.</span></h2>
+                <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting
+                    prose here.</p>
+            </div>
+            <div class="col-md-5">
+                <img src="./src/img/home/img4.jpg" alt="" width="100%" height="auto">
+            </div>
+        </div>
+    </main>
 
     <!-- ================= FOOTER ============== -->
     <footer class="text-center text-lg-center justify-content-center d-flex mt-auto" id="footer"></footer>
