se agrega img en title

--- a/registroUsuario.html
+++ b/registroUsuario.html
@@ -17,6 +17,8 @@
         rel="stylesheet">
     <!-- css interno -->
     <link rel="stylesheet" href="./css/main.css">
+    <!-- Logo -->
+    <link rel="shortcut icon" href="./src/img/logos/kotomitl3.png" type="image/x-icon">
 </head> 
 
 <body>
