--- a/contacto.html
+++ b/contacto.html
@@ -20,6 +20,8 @@
         rel="stylesheet">
     <!-- css interno -->
     <link rel="stylesheet" href="./css/main.css">
+    <!-- Logo -->
+    <link rel="shortcut icon" href="./src/img/logos/kotomitl3.png" type="image/x-icon">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -29,104 +31,101 @@
     <!-- ================= CONTENIDO ============== -->
     <main class="container mb-5">
         <section class="informacion__seccion text-center">
-                    <!--=================== Sección de información ===============-->
-                    <div class="columna">
-                        <h1>Contáctenos</h1>
-                        <!--Info contacto-->
-                        <div class="inf-contact">
-                            <span>Información</span>
-                            <p> <i class="bi bi-geo-fill icon__contacto"></i> Oaxaca 26, Dolores Hidalgo,
-                                Gto.</p>
-                            <p><i class="bi bi-telephone-fill icon__contacto"></i>(+52) 41 81 10 20 62</p>
-                            <p><i class="bi bi-envelope-fill icon__contacto"></i>ventas@kotomitl.com</p>
+            <!--=================== Sección de información ===============-->
+            <div class="columna">
+                <h1>Contáctenos</h1>
+                <!--Info contacto-->
+                <div class="inf-contact">
+                    <span>Información</span>
+                    <p> <i class="bi bi-geo-fill icon__contacto"></i> Oaxaca 26, Dolores Hidalgo,
+                        Gto.</p>
+                    <p><i class="bi bi-telephone-fill icon__contacto"></i>(+52) 41 81 10 20 62</p>
+                    <p><i class="bi bi-envelope-fill icon__contacto"></i>ventas@kotomitl.com</p>
+                </div>
+
+                <div class="maps">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.8270754170117!2d-100.93788102504558!3d21.15927898328351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b3fa9def5bc27%3A0x5af5e12e7f481a3e!2sOaxaca%2026%2C%20Centro%2C%2037800%20Dolores%20Hidalgo%20Cuna%20de%20la%20Independencia%20Nacional%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1691083849483!5m2!1ses-419!2smx"
+                        width="100%" height="100%" style="border:1px;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+            <!--=================== Formulario de contacto ===============-->
+            <div class="columna colForm">
+                <h1 style="text-align: center;">Cuéntanos sobre ti</h1>
+
+                <form class="needs-validation" id="form" action="https://formsubmit.co/tester.anonimo.85@gmail.com"
+                    method="POST">
+
+                    <!-- Nombre -->
+                    <div class="mb-5">
+                        <div class="d-flex">
+                            <label for="nombreInput" class="form-label">Nombre</label>
+                            <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
+                                id="alert_nombre">
+                                <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
+                                <span id="alert_nombre_txt"></span>
+                            </div>
                         </div>
+                        <input type="text" class="form-control" id="nombreInput" placeholder="Ej. Michell Flores"
+                            required minlength="3" maxlength="50" autocomplete="name" name="name">
+                    </div>
 
-                        <div class="maps">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.8270754170117!2d-100.93788102504558!3d21.15927898328351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b3fa9def5bc27%3A0x5af5e12e7f481a3e!2sOaxaca%2026%2C%20Centro%2C%2037800%20Dolores%20Hidalgo%20Cuna%20de%20la%20Independencia%20Nacional%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1691083849483!5m2!1ses-419!2smx"
-                                width="100%" height="100%" style="border:1px;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <!-- Teléfono -->
+                    <div class="mb-5">
+                        <div class="d-flex">
+                            <label for="telInput" class="form-label">Teléfono</label>
+                            <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
+                                id="alert_telefono">
+                                <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
+                                <span id="alert_telefono_txt"></span>
+                            </div>
                         </div>
+                        <input oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
+                            type="tel" class="form-control" id="telInput" placeholder="10 dígitos" required
+                            minlength="10" maxlength="10" autocomplete="tel" name="phone">
                     </div>
-                    <!--=================== Formulario de contacto ===============-->
-                    <div class="columna colForm">
-                        <h1 style="text-align: center;">Cuéntanos sobre ti</h1>
+                    <!-- Email -->
+                    <div class="mb-5">
+                        <div class="d-flex">
+                            <label for="emailInput" class="form-label">E-mail</label>
 
-                        <form class="needs-validation" id="form"
-                            action="https://formsubmit.co/tester.anonimo.85@gmail.com" method="POST">
-
-                            <!-- Nombre -->
-                            <div class="mb-5">
-                                <div class="d-flex">
-                                    <label for="nombreInput" class="form-label">Nombre</label>
-                                    <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
-                                        id="alert_nombre">
-                                        <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
-                                        <span id="alert_nombre_txt"></span>
-                                    </div>
-                                </div>
-                                <input type="text" class="form-control" id="nombreInput"
-                                    placeholder="Ej. Michell Flores" required minlength="3" maxlength="50"
-                                    autocomplete="name" name="name">
+                            <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
+                                id="alert_email">
+                                <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
+                                <span id="alert_email_txt"></span>
                             </div>
-
-                            <!-- Teléfono -->
-                            <div class="mb-5">
-                                <div class="d-flex">
-                                    <label for="telInput" class="form-label">Teléfono</label>
-                                    <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
-                                        id="alert_telefono">
-                                        <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
-                                        <span id="alert_telefono_txt"></span>
-                                    </div>
-                                </div>
-                                <input
-                                    oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
-                                    type="tel" class="form-control" id="telInput" placeholder="10 dígitos" required
-                                    minlength="10" maxlength="10" autocomplete="tel" name="phone">
-                            </div>
-                            <!-- Email -->
-                            <div class="mb-5">
-                                <div class="d-flex">
-                                    <label for="emailInput" class="form-label">E-mail</label>
-
-                                    <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
-                                        id="alert_email">
-                                        <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
-                                        <span id="alert_email_txt"></span>
-                                    </div>
-                                </div>
-                                <input type="email" class="form-control" id="emailInput"
-                                    placeholder="Ej. correo@example.com" required name="email">
-                            </div>
-                            <!-- Mensaje -->
-                            <div class="mb-5">
-                                <div class="d-flex">
-                                    <label for="msjArea" class="form-label">Mensaje</label>
-                                    <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
-                                        id="alert_mensaje">
-                                        <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
-                                        <span id="alert_mensaje_txt"></span>
-                                    </div>
-                                </div>
-                                <textarea class="form-control" id="msjArea" rows="3" required name="message"></textarea>
-                            </div>
-                            <!-- Botón de envío -->
-                            <div class="d-grid gap-2 col-6 mx-auto">
-                                <button type="button" class="btn btn-warning" id="btnEnviar"
-                                    style="margin: 2rem 0 2rem 0;">
-                                    <span> 
-                                        <i class="bi bi-send icon__send"></i>
-                                    </span>
-                                    Enviar mensaje </button>
-                            </div>
-
-                            <!-- deshabilitar propiedad de captcha y página por defecto de form submit   -->
-                            <input type="hidden" name="_captcha" value="false">
-                            <input type="hidden" name="_next" value="https://robertomonzon.github.io/kotomitl/contacto">
-
-                        </form>
+                        </div>
+                        <input type="email" class="form-control" id="emailInput" placeholder="Ej. correo@example.com"
+                            required name="email">
                     </div>
+                    <!-- Mensaje -->
+                    <div class="mb-5">
+                        <div class="d-flex">
+                            <label for="msjArea" class="form-label">Mensaje</label>
+                            <div class="warning__text" style="display:none; color:rgb(186, 3, 3)" role="alert"
+                                id="alert_mensaje">
+                                <span><i class="bi bi-exclamation-triangle-fill icon__warning"></i></span>
+                                <span id="alert_mensaje_txt"></span>
+                            </div>
+                        </div>
+                        <textarea class="form-control" id="msjArea" rows="3" required name="message"></textarea>
+                    </div>
+                    <!-- Botón de envío -->
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                        <button type="button" class="btn btn-warning" id="btnEnviar" style="margin: 2rem 0 2rem 0;">
+                            <span>
+                                <i class="bi bi-send icon__send"></i>
+                            </span>
+                            Enviar mensaje </button>
+                    </div>
+
+                    <!-- deshabilitar propiedad de captcha y página por defecto de form submit   -->
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_next" value="https://robertomonzon.github.io/kotomitl/contacto">
+
+                </form>
+            </div>
         </section>
     </main>
 
