se corrige footer y navbar

--- a/productos.html
+++ b/productos.html
@@ -28,7 +28,7 @@
   <!-- ================= CONTENIDO ============== -->
   <main class="container mb-5">
     <!-- <section class="container"> -->
-      <button type="button" class="btn btn-outline-primary" id="filt_cat2">Catalogo</button>
+      <button type="button" class="btn btn-outline-primary" id="filt_cat2">Catálogo</button>
       <div class="container-fluid text-center container-products">
         <div class="btn-group" role="group"  id="filtro-superior">
           <button type="button" class="btn btn-outline-primary" id="filt_mas2">Hombre</button>
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="col-md-10">
-          <button href="" class="filtro-catalogo" id="filt_cat">Catalogo</button>
+          <button href="" class="filtro-catalogo" id="filt_cat">Catálogo</button>
           
           <div id="main__prods" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-6">
           </div>
