--- a/alta.html
+++ b/alta.html
@@ -4,16 +4,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="style.css">
+    <title>Alta de productos</title>
+    <!-- iconos bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- css bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- fonts google-->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;600&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap"
+        rel="stylesheet">
+    <!-- css interno -->
+    <link rel="stylesheet" href="./css/main.css">
+    <!-- Logo -->
+    <link rel="shortcut icon" href="./src/img/logos/kotomitl3.png" type="image/x-icon">
 </head>
 
 <body>
@@ -67,19 +75,19 @@
             <br>
             <div class="row">
                 <div class="col">
-                    <div class="mb-3">
+                    <div class="mb-5">
                         <label for="nombreInput" class="form-label">Nombre de producto</label>
                         <input type="text" class="form-control" id="nombreInput" aria-describedby="emailHelp">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-5">
                         <label for="precioInput" class="form-label">Precio unitario</label>
                         <input type="number" class="form-control" id="precioInput" aria-describedby="emailHelp">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-5">
                         <label for="costoInput" class="form-label">Costo unitario</label>
                         <input type="number" class="form-control" id="costoInput" aria-describedby="emailHelp">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-5">
                         <label for="categoria" class="form-label">Categoria</label>
                         <select class="form-control" id="categoria">
                             <option selected value="0">Seleccione la categoria</option>
@@ -88,7 +96,7 @@
                             <option value="3">Humanos pequeños</option>
                         </select>
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-5">
                         <label for="descripcion" class="form-label">Descripción</label>
                         <textarea class="form-control" id="descripcion" rows="3"></textarea>
                     </div>
