Actualización ortografia productos

--- a/index.html
+++ b/index.html
@@ -147,14 +147,12 @@
                 <h2 class="featurette-heading fw-bold lh-1 ">Valoramos a nuestras artesanas y artesanos de México.
                     <br>
                 </h2>
-                <p class="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti aut, mollitia odit
-                    praesentium suscipit neque eius eos ducimus, possimus explicabo expedita maxime ipsam facere sit sed
-                    reprehenderit illum. Officia, accusamus.</p>
+                <p class="">Nuestra página web apoya a los artesanos de México por varias razones. <br>¡Apoyar a los artesanos de México es una forma de apoyar a nuestra comunidad y preservar nuestras raíces culturales!.</p>
 
                 <ul style="margin-top:3rem; margin-bottom: 3rem;">
-                    <li style="font-size: 1.6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                    <li style="font-size: 1.6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                    <li style="font-size: 1.6rem;">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                    <li style="font-size: 1.6rem;">Creemos que el trabajo de los artesanos es una parte importante de la cultura y la tradición de México.</li>
+                    <li style="font-size: 1.6rem;">Buscamos ayudar a los artesanos a tener un medio para vender sus productos y obtener un ingreso justo por su trabajo.</li>
+                    <li style="font-size: 1.6rem;">Queremos promover el turismo en México al mostrar la belleza y la diversidad de los productos artesanales mexicanos.</li>
                 </ul>
             </div>
             <div class="col-md-5">
@@ -169,8 +167,7 @@
                     <h2 class="featurette-heading fw-bold lh-1">Apoyo a los proyectos productivos de los artesanos<br>
                     </h2>
 
-                    <p class="">Some great placeholder content for the first featurette here. Imagine some exciting
-                        prose here.</p>
+                    <p class="">“Estoy muy agradecido por haber encontrado esta página web para vender mis productos. Desde que empecé a vender aquí, he visto un aumento en mis ventas y he recibido muchos comentarios positivos de los clientes. <br>¡Gracias por apoyar a los artesanos como yo!.</p>
                 </div>
             </div>
     </main>
