Desarolla index y se arreglan filtros de productos

--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Femenina</h2>
-                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet
-                                consectetur
-                                adipisicing elit. Eum nemo veniam quisquam ullam.</p>
+                            <p class="card-text" style="text-align: justify;">Diseños únicos inspirados en el folclor de México. Descubre increíbles vestidos, blusas, accesorios y más.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
                             <button type="button" class="btn btn-warning">
@@ -102,9 +100,7 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Infantil</h2>
-                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet
-                                consectetur
-                                adipisicing elit. Eum nemo veniam quisquam ullam.</p>
+                            <p class="card-text" style="text-align: justify;">Amplia variedad de prendas de infantes artesanales, hechas a mano por talentosos artesanos de México.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
                             <button type="button" class="btn btn-warning">
@@ -125,9 +121,7 @@
                         </div>
                         <div class="card-body">
                             <h2 class="fw-normal">Masculina</h2>
-                            <p class="card-text" style="text-align: justify;">Lorem ipsum, dolor sit amet
-                                consectetur
-                                adipisicing elit. Eum nemo veniam quisquam ullam.</p>
+                            <p class="card-text" style="text-align: justify;">Cada prenda es única y está hecha con materiales de alta calidad, lo que garantiza su durabilidad y comodidad.</p>
                         </div>
                         <div class="card-footer border-top-0 text-center">
                             <button type="button" class="btn btn-warning">
@@ -167,7 +161,20 @@
                     <h2 class="featurette-heading fw-bold lh-1">Apoyo a los proyectos productivos de los artesanos<br>
                     </h2>
 
-                    <p class="">“Estoy muy agradecido por haber encontrado esta página web para vender mis productos. Desde que empecé a vender aquí, he visto un aumento en mis ventas y he recibido muchos comentarios positivos de los clientes. <br>¡Gracias por apoyar a los artesanos como yo!.</p>
+                    <p style="text-align: center; font-weight: bold;">Testimonios de nuestr@s artesan@s<br>
+                    </p>
+                    <br>
+                    <br>
+                    <br>
+                    <p class="">“Estoy muy agradecido por haber encontrado esta página web para vender mis productos. </p>
+                    <br>
+                    <br>
+                    <br>
+                    <p>"Desde que empecé a vender aquí, he visto un aumento en mis ventas y he recibido muchos comentarios positivos de los clientes"</p>
+                    <br>
+                    <br>
+                    <br>
+                    <p>"¡Gracias por apoyar a los artesanos de nuestro país!"</p>
                 </div>
             </div>
     </main>
