Se modificó la parte final del formulario de registro y se añadió el formulario de inicio de sesión, falta que sea funcional

--- a/registroUsuario.html
+++ b/registroUsuario.html
@@ -137,8 +137,14 @@
                             <span>
                                 <i class="bi bi-send icon__send"></i>
                             </span>
-                            Enviar mensaje </button>
+                            Registrarse </button>
                     </div>
+
+                    <div class="d-grid gap-2 col-7 mx-auto">
+                        <h3>¿Ya tienes una cuenta? <a href="./loginUsuario.html" style="font-size: inherit;">¡Inicia sesión!</a></h3>
+                    </div>
+                    
+
                 </form>
             </div>
              <!--=================== Sección de banner ===============-->
