se indican 10 caracteres como min en mensaje de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -109,7 +109,7 @@
                                 <span id="alert_mensaje_txt"></span>
                             </div>
                         </div>
-                        <textarea class="form-control" id="msjArea" rows="3" required name="message" placeholder="Déjanos saber tus comentarios"></textarea>
+                        <textarea class="form-control" id="msjArea" rows="3" required name="message" placeholder="Déjanos saber tus comentarios (min. 10 caracteres)"></textarea>
                     </div>
                     <!-- Botón de envío -->
                     <div class="d-grid gap-2 col-6 mx-auto">
