corrección de acentos

--- a/alta.html
+++ b/alta.html
@@ -88,12 +88,12 @@
                         <input type="number" class="form-control" id="costoInput" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-5">
-                        <label for="categoria" class="form-label">Categoria</label>
+                        <label for="categoria" class="form-label">Categoría</label>
                         <select class="form-control" id="categoria">
-                            <option selected value="0">Seleccione la categoria</option>
+                            <option selected value="0">Seleccione la categoría</option>
                             <option value="1">Hombre</option>
                             <option value="2">Mujer</option>
-                            <option value="3">Humanos pequeños</option>
+                            <option value="3">Infantes</option>
                         </select>
                     </div>
                     <div class="mb-5">
