Se corrigen acentos de contaco

--- a/contacto.html
+++ b/contacto.html
@@ -33,7 +33,7 @@
         <section class="informacion__seccion text-center">
             <!--=================== Sección de información ===============-->
             <div class="columna">
-                <h1>Contáctenos</h1>
+                <h1>Contáctanos</h1>
                 <!--Info contacto-->
                 <div class="inf-contact">
                     <span>Información</span>
