--- a/loginUsuario.html
+++ b/loginUsuario.html
@@ -35,7 +35,7 @@
 
  <!--=================== Sección de banner ===============-->
 <!--=================== Sección de banner ===============-->
-<div class="columna d-none d-md-block" style="background-color: aquamarine; height: 70vh;">
+<div class="columna d-none d-md-block" style=" color:white;background-color: rgb(10, 87, 61); height: 70vh;">
     <!-- Contenido de la sección de banner -->
 </div>
 
